# text-mining-project

./: .gitignore  AUTHORS  CMakeLists.txt  README  TODO  words_small.txt
doc/: Doxyfile.in
lib/: contract.cc  indent.cc
src/: bst.cc  bst.hh  trie.cc  trie.hh
src/app/: main.cc  parser.cc  parser.hh  patricia.cc  patricia.hh  search.cc  search.hh  trie.cc  trie.hh
src/compiler/: main.cc  parser.cc  parser.hh  patricia.cc  patricia.hh  patricia_builder.cc  patricia_builder.hh  trie.cc  trie.hh
src/patricia/: patricia.cc  patricia.hh
test/: .gitignore  1_query_approx_0.txt  1_query_approx_1.txt  1_query_approx_2.txt  1_query_approx_3.txt  1_query_approx_4.txt  1_query_approx_5.txt  3000_queries_approx_0.txt  3000_queries_approx_1.txt  3000_queries_approx_2.txt  30_queries_approx_2.txt  bench.sh  build.sh  dict_same_freq.txt  init_testsuite.sh  test.sh  timeout.pl
